--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         .hotbar {
             width: 100%;
             max-width: 800px;
-            height: 80px; /* Aumentata l'altezza della hotbar */
+            height: 80px;
             background-color: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(5px);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -27,7 +27,7 @@
             margin: 20px auto;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
             padding: 0 20px;
             box-sizing: border-box;
             position: sticky;
@@ -39,6 +39,27 @@
             font-size: 24px;
             font-weight: bold;
             color: #333;
+            margin-right: auto;
+        }
+
+        .hotbar-icons {
+            display: flex;
+            align-items: center;
+        }
+
+        .hotbar-icons a {
+            margin-left: 20px;
+            text-decoration: none;
+            color: #333;
+            display: flex;
+            align-items: center;
+        }
+
+        .hotbar-icons svg {
+            width: 24px;
+            height: 24px;
+            fill: #333;
+            margin-left: 5px;
         }
 
         .floating-button {
@@ -91,16 +112,25 @@
 <body>
     <div class="hotbar">
         <div class="title">brickers</div>
+        <div class="hotbar-icons">
+            <a href="#home" class="home-link">Home</a>
+            <a href="https://whatsapp.com/channel/0029Vabjtii4yltMQCO1g433" target="_blank">
+                WhatsApp
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M12.004 2c-5.523 0-10 4.477-10 10 0 1.771.463 3.503 1.338 5.031l-1.464 5.307 5.444-1.428c1.5.822 3.196 1.231 4.883 1.231 5.523 0 10-4.477 10-10s-4.477-10-10-10zm5.837 14.284c-.243.679-1.232 1.244-2.017 1.406-.535.111-1.206.2-3.508-.75-2.947-1.186-4.81-4.101-4.958-4.294-.147-.194-1.179-1.567-1.179-2.987s.747-2.116 1.012-2.405c.263-.29.579-.362.772-.362.192 0 .384.002.553.01.179.008.417-.067.652.504.243.593.826 2.057.898 2.208.071.151.116.323.023.518-.093.195-.139.316-.278.485-.139.169-.293.375-.421.504s-.276.265-.119.524c.157.259.698 1.147 1.497 1.859 1.03.925 1.894 1.216 2.153 1.346.259.13.41.112.553-.065.143-.176.637-.743.807-1.001.17-.259.339-.216.58-.13.241.086 1.531.722 1.796.854.266.132.444.195.51.308.066.113.066.656-.177 1.335z"/>
+                </svg>
+            </a>
+        </div>
     </div>
-    <div class="info-container">
+    <div class="info-container" id="home">
         <div class="info-box">
-            <p>This channel is dedicated to bringing creative stories and animations using LEGO bricks. Each video is crafted with meticulous attention to detail, capturing the essence of storytelling through stop-motion animation.</p>
+            <p>Questo canale è dedicato alla creazione di storie e animazioni creative utilizzando i mattoncini LEGO. Ogni video è realizzato con attenzione meticolosa ai dettagli, catturando l'essenza della narrazione attraverso l'animazione in stop-motion.</p>
         </div>
         <div class="info-box">
-            <p>Creating these videos is a labor-intensive process. It involves taking numerous photos of small incremental movements of LEGO pieces, carefully piecing them together to form seamless animations that tell engaging stories.</p>
+            <p>Creare questi video è un processo laborioso. Implica scattare numerose foto di piccoli movimenti incrementali dei pezzi LEGO, assemblandoli con cura per formare animazioni fluide che raccontano storie coinvolgenti.</p>
         </div>
         <div class="info-box">
-            <p>By clicking the button below, you can subscribe to the channel or simply explore the amazing content available. Your support helps in continuing the creation of high-quality, entertaining videos for all LEGO enthusiasts.</p>
+            <p>Cliccando il pulsante qui sotto, puoi iscriverti al canale o semplicemente esplorare i fantastici contenuti disponibili. Il tuo supporto aiuta a continuare la creazione di video di alta qualità e divertenti per tutti gli appassionati di LEGO.</p>
         </div>
     </div>
     <a href="https://youtube.com/@brickers6458" target="_blank" class="floating-button">
