--- a/index.html
+++ b/index.html
@@ -19,34 +19,27 @@
         .hotbar {
             width: 100%;
             max-width: 800px;
-            height: 100px; /* Altezza aumentata leggermente per ospitare i link in più righe */
+            height: 80px;
             background-color: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(5px);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
             margin: 20px auto;
             display: flex;
-            flex-direction: column; /* Cambiato a colonna per il layout verticale */
-            align-items: flex-start; /* Allineamento a sinistra */
-            justify-content: center;
-            padding: 10px 20px;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 0 20px;
             box-sizing: border-box;
             position: sticky;
             top: 0;
             z-index: 1000;
         }
 
-        .title-bar {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px; /* Spazio tra la barra del titolo e il link YouTube */
-        }
-
         .title {
             font-size: 24px;
             font-weight: bold;
             color: #333;
-            margin-right: 20px; /* Spazio tra il titolo e i link */
+            margin-right: 20px;
         }
 
         .hotbar-icons {
@@ -55,7 +48,7 @@
         }
 
         .hotbar-icons a {
-            margin: 0 10px;
+            margin: 0 5px; /* Spazio ridotto tra i link per adattarsi meglio */
             text-decoration: none;
             color: #333;
             display: flex;
@@ -67,32 +60,6 @@
             height: 24px;
             fill: #333;
             margin-left: 5px;
-        }
-
-        .floating-button {
-            width: 50px;
-            height: 50px;
-            background-color: #ff0000;
-            border-radius: 15px;
-            position: fixed;
-            right: 10px;
-            bottom: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease;
-            cursor: pointer;
-        }
-
-        .floating-button:hover {
-            transform: translateY(-5px);
-        }
-
-        .floating-button svg {
-            width: 30px;
-            height: 30px;
-            fill: #fff;
         }
 
         .info-container {
@@ -118,19 +85,14 @@
 </head>
 <body>
     <div class="hotbar">
-        <div class="title-bar">
-            <div class="title">brickers</div>
-            <div class="hotbar-icons">
-                <a href="#home" class="home-link">Home</a>
-                <a href="https://whatsapp.com/channel/0029Vabjtii4yltMQCO1g433" target="_blank">
-                    WhatsApp
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path d="M12.004 2c-5.523 0-10 4.477-10 10 0 1.771.463 3.503 1.338 5.031l-1.464 5.307 5.444-1.428c1.5.822 3.196 1.231 4.883 1.231 5.523 0 10-4.477 10-10s-4.477-10-10-10zm5.837 14.284c-.243.679-1.232 1.244-2.017 1.406-.535.111-1.206.2-3.508-.75-2.947-1.186-4.81-4.101-4.958-4.294-.147-.194-1.179-1.567-1.179-2.987s.747-2.116 1.012-2.405c.263-.29.579-.362.772-.362.192 0 .384.002.553.01.179.008.417-.067.652.504.243.593.826 2.057.898 2.208.071.151.116.323.023.518-.093.195-.139.316-.278.485-.139.169-.293.375-.421.504s-.276.265-.119.524c.157.259.698 1.147 1.497 1.859 1.03.925 1.894 1.216 2.153 1.346.259.13.41.112.553-.065.143-.176.637-.743.807-1.001.17-.259.339-.216.58-.13.241.086 1.531.722 1.796.854.266.132.444.195.51.308.066.113.066.656-.177 1.335z"/>
-                    </svg>
-                </a>
-            </div>
-        </div>
+        <div class="title">brickers</div>
         <div class="hotbar-icons">
+            <a href="https://whatsapp.com/channel/0029Vabjtii4yltMQCO1g433" target="_blank">
+                WhatsApp
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M12.004 2c-5.523 0-10 4.477-10 10 0 1.771.463 3.503 1.338 5.031l-1.464 5.307 5.444-1.428c1.5.822 3.196 1.231 4.883 1.231 5.523 0 10-4.477 10-10s-4.477-10-10-10zm5.837 14.284c-.243.679-1.232 1.244-2.017 1.406-.535.111-1.206.2-3.508-.75-2.947-1.186-4.81-4.101-4.958-4.294-.147-.194-1.179-1.567-1.179-2.987s.747-2.116 1.012-2.405c.263-.29.579-.362.772-.362.192 0 .384.002.553.01.179.008.417-.067.652.504.243.593.826 2.057.898 2.208.071.151.116.323.023.518-.093.195-.139.316-.278.485-.139.169-.293.375-.421.504s-.276.265-.119.524c.157.259.698 1.147 1.497 1.859 1.03.925 1.894 1.216 2.153 1.346.259.13.41.112.553-.065.143-.176.637-.743.807-1.001.17-.259.339-.216.58-.13.241.086 1.531.722 1.796.854.266.132.444.195.51.308.066.113.066.656-.177 1.335z"/>
+                </svg>
+            </a>
             <a href="https://youtube.com/@brickers6458" target="_blank">
                 YouTube
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -147,13 +109,8 @@
             <p>Creare questi video è un processo laborioso. Implica scattare numerose foto di piccoli movimenti incrementali dei pezzi LEGO, assemblandoli con cura per formare animazioni fluide che raccontano storie coinvolgenti.</p>
         </div>
         <div class="info-box">
-            <p>Cliccando il pulsante qui sotto, puoi iscriverti al canale o semplicemente esplorare i fantastici contenuti disponibili. Il tuo supporto aiuta a continuare la creazione di video di alta qualità e divertenti per tutti gli appassionati di LEGO.</p>
+            <p>Cliccando sui tasti "WhatsApp" e "YouTube", puoi esplorare ulteriori contenuti e unirti al canale o al gruppo desiderato per supportare e rimanere aggiornato con le ultime novità.</p>
         </div>
     </div>
-    <a href="https://youtube.com/@brickers6458" target="_blank" class="floating-button">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path d="M19.615 3.184c.927.23 1.659.96 1.888 1.888.447 1.727.497 5.328.497 5.328s0 3.601-.497 5.328c-.23.927-.961 1.658-1.888 1.888-1.727.447-7.615.447-7.615.447s-5.888 0-7.615-.447c-.927-.23-1.658-.961-1.888-1.888-.497-1.727-.497-5.328-.497-5.328s0-3.601.497-5.328c.23-.927.961-1.658 1.888-1.888 1.727-.447 7.615-.447 7.615-.447s5.888 0 7.615.447zm-10.615 4.816v6l5.5-3-5.5-3z"/>
-        </svg>
-    </a>
 </body>
 </html>
