--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             font-size: 24px;
             font-weight: bold;
             color: #333;
-            margin-right: 20px;
+            margin-right: 10px; /* Spazio ridotto tra il titolo e i link */
         }
 
         .hotbar-icons {
@@ -48,7 +48,7 @@
         }
 
         .hotbar-icons a {
-            margin: 0 5px; /* Spazio ridotto tra i link per adattarsi meglio */
+            margin: 0 5px; /* Spazio ridotto tra i link */
             text-decoration: none;
             color: #333;
             display: flex;
