--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
-            padding: 0 20px;
+            padding: 0 10px; /* Ridotto il padding per spostare gli elementi a sinistra */
             box-sizing: border-box;
             position: sticky;
             top: 0;
