--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotbar con Pulsante</title>
+    <title>Hotbar con Neve</title>
     <style>
         body {
             margin: 0;
@@ -13,7 +13,7 @@
             flex-direction: column;
             align-items: center;
             background-color: #f3f4f6;
-            overflow-y: auto;
+            overflow: hidden; /* Cambiato per nascondere le palline fuori dallo schermo */
         }
 
         .hotbar {
@@ -28,18 +28,21 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
-            padding: 0 10px; /* Ridotto il padding per spostare gli elementi a sinistra */
+            padding: 0 10px;
             box-sizing: border-box;
             position: sticky;
             top: 0;
             z-index: 1000;
+            background-image: url('/1000317435.jpg'); /* Inserisci il percorso della tua immagine qui */
+            background-size: cover; /* Adatta l'immagine all'area */
+            background-position: center; /* Centra l'immagine */
         }
 
         .title {
             font-size: 24px;
             font-weight: bold;
             color: #333;
-            margin-right: 10px; /* Spazio ridotto tra il titolo e i link */
+            margin-right: 10px;
         }
 
         .hotbar-icons {
@@ -48,7 +51,7 @@
         }
 
         .hotbar-icons a {
-            margin: 0 5px; /* Spazio ridotto tra i link */
+            margin: 0 5px;
             text-decoration: none;
             color: #333;
             display: flex;
@@ -81,6 +84,16 @@
             color: #333;
             font-size: 16px;
         }
+
+        .snowflake {
+            position: absolute;
+            top: -10px;
+            color: #cccccc; /* Colore grigio chiaro per il fiocco di neve */
+            font-size: 20px;
+            user-select: none;
+            pointer-events: none;
+            text-shadow: 1px 1px 2px #666666; /* Ombra per l'effetto */
+        }
     </style>
 </head>
 <body>
@@ -112,5 +125,38 @@
             <p>Cliccando sui tasti "WhatsApp" e "YouTube", puoi esplorare ulteriori contenuti e unirti al canale o al gruppo desiderato per supportare e rimanere aggiornato con le ultime novità.</p>
         </div>
     </div>
+
+    <script>
+        // Funzione per creare un fiocco di neve
+        function createSnowflake() {
+            const snowflake = document.createElement("div");
+            snowflake.classList.add("snowflake");
+            snowflake.textContent = "•"; // Simbolo del fiocco di neve
+
+            // Posizione orizzontale casuale
+            snowflake.style.left = Math.random() * window.innerWidth + "px";
+
+            // Appendere il fiocco di neve al corpo
+            document.body.appendChild(snowflake);
+
+            // Animazione del fiocco di neve verso il basso
+            snowflake.animate(
+                [
+                    { transform: "translateY(0)" },
+                    { transform: `translateY(${window.innerHeight}px)` }
+                ],
+                {
+                    duration: 15000, // Durata di 15 secondi
+                    iterations: 1,
+                    easing: "linear"
+                }
+            ).onfinish = () => {
+                snowflake.remove(); // Rimuovere il fiocco di neve al termine
+            };
+        }
+
+        // Creazione continua di fiocchi di neve
+        setInterval(createSnowflake, 100); // Maggiore frequenza di creazione
+    </script>
 </body>
 </html>
