--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             position: sticky;
             top: 0;
             z-index: 1000;
-            background-image: url('/1000317435.jpg'); /* Inserisci il percorso della tua immagine qui */
+            background-image: url('1000317435.jpg'); /* Inserisci il percorso della tua immagine qui */
             background-size: cover; /* Adatta l'immagine all'area */
             background-position: center; /* Centra l'immagine */
         }
