--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
             flex-direction: column;
             align-items: center;
             background-color: #f3f4f6;
-            overflow: hidden; /* Cambiato per nascondere le palline fuori dallo schermo */
+            overflow: hidden; /* Nasconde le palline fuori dallo schermo */
         }
 
         .hotbar {
-            width: 100%;
-            max-width: 800px;
+            max-width: 100%; /* Adatta la hotbar alla larghezza del dispositivo */
             height: 80px;
-            background-color: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(5px);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
             margin: 20px auto;
             display: flex;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: center; /* Centra il contenuto della hotbar */
             padding: 0 10px;
             box-sizing: border-box;
             position: sticky;
@@ -38,11 +36,15 @@
             background-position: center; /* Centra l'immagine */
         }
 
-        .title {
-            font-size: 24px;
+        .title, .hotbar-icons a {
+            font-size: 16px;
             font-weight: bold;
-            color: #333;
+            color: #fff;
+            background-color: rgba(0, 0, 0, 0.5); /* Sfondo semi-trasparente per leggibilità */
+            padding: 5px;
+            border-radius: 5px;
             margin-right: 10px;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Ombra per il testo */
         }
 
         .hotbar-icons {
@@ -50,18 +52,10 @@
             align-items: center;
         }
 
-        .hotbar-icons a {
-            margin: 0 5px;
-            text-decoration: none;
-            color: #333;
-            display: flex;
-            align-items: center;
-        }
-
         .hotbar-icons svg {
-            width: 24px;
-            height: 24px;
-            fill: #333;
+            width: 16px;
+            height: 16px;
+            fill: #fff;
             margin-left: 5px;
         }
 
