--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <video autoplay loop>
+    <video autoplay muted loop>
         <source src="ShadowT - ROBLOX SNAPCHAT TROLLING PART 27😭👻  funny  roblo...mp4" type="video/mp4">
         Il tuo browser non supporta il video.
     </video>
