--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     </style>
 </head>
 <body>
-    <video autoplay muted loop>
-        <source src="ShadowT - ROBLOX SNAPCHAT TROLLING PART 27😭👻  funny  roblo...mp4" type="video/mp4">
+    <video autoplay loop muted controls playsinline>
+        <source src="ShadowT - ROBLOX SNAPCHAT TROLLING PART 27😭👻 funny roblo...mp4" type="video/mp4">
         Il tuo browser non supporta il video.
     </video>
+    <p style="color: red; text-align: center;">Se il video non parte, controlla il percorso e il formato del file.</p>
 </body>
 </html>
