--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             position: sticky;
             top: 0;
             z-index: 1000;
-            background-image: url('IMG-20241207-WA0012.jpg'); /* Inserisci il percorso della tua immagine qui */
+            background-image: url('1000317435.jpg'); /* Inserisci il percorso della tua immagine qui */
             background-size: cover;
             background-position: center;
         }
@@ -93,7 +93,7 @@
 </head>
 <body>
     <div class="hotbar">
-        <div class="title">brickers</div>
+        <div class="title">brickersITA</div>
         <div class="hotbar-icons">
             <a href="https://whatsapp.com/channel/0029Vabjtii4yltMQCO1g433" target="_blank">
                 WhatsApp
