--- a/index.html
+++ b/index.html
@@ -1,126 +1,1 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotbar</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            min-height: 100vh; /* Cambiato da height a min-height */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #f3f4f6;
-            overflow-x: hidden; /* Permette solo lo scroll verticale */
-        }
-
-        .hotbar {
-            max-width: 100%;
-            height: 80px;
-            backdrop-filter: blur(5px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            margin: 20px auto;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 0 10px;
-            box-sizing: border-box;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            background-image: url('1000317435.jpg'); /* Inserisci il percorso della tua immagine qui */
-            background-size: cover;
-            background-position: center;
-        }
-
-        .title, .hotbar-icons a {
-            font-size: 16px;
-            font-weight: bold;
-            color: #fff;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 5px;
-            border-radius: 5px;
-            margin-right: 10px;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-        }
-
-        .hotbar-icons {
-            display: flex;
-            align-items: center;
-        }
-
-        .hotbar-icons svg {
-            width: 16px;
-            height: 16px;
-            fill: #fff;
-            margin-left: 5px;
-        }
-
-        .info-container {
-            max-width: 800px;
-            width: 90%;
-            margin: 20px auto;
-            padding-bottom: 20px; /* Aggiunto padding per margine inferiore */
-        }
-
-        .info-box, .video-box {
-            background-color: #fff;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-
-        .info-box p {
-            margin: 0 0 15px;
-            color: #333;
-            font-size: 16px;
-        }
-
-        .slash {
-            color: #ff5733;
-            font-weight: bold;
-        }
-
-        .video-box video {
-            width: 100%;
-            border-radius: 10px;
-            outline: none;
-        }
-    </style>
-</head>
-<body>
-    <div class="hotbar">
-        <div class="title">brickers</div>
-        <div class="hotbar-icons">
-            <a href="https://whatsapp.com/channel/0029Vabjtii4yltMQCO1g433" target="_blank">
-                WhatsApp
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M12.004 2c-5.523 0-10 4.477-10 10 0 1.771.463 3.503 1.338 5.031l-1.464 5.307 5.444-1.428c1.5.822 3.196 1.231 4.883 1.231 5.523 0 10-4.477 10-10s-4.477-10-10-10zm5.837 14.284c-.243.679-1.232 1.244-2.017 1.406-.535.111-1.206.2-3.508-.75-2.947-1.186-4.81-4.101-4.958-4.294-.147-.194-1.179-1.567-1.179-2.987s.747-2.116 1.012-2.405c.263-.29.579-.362.772-.362.192 0 .384.002.553.01.179.008.417-.067.652.504.243.593.826 2.057.898 2.208.071.151.116.323.023.518-.093.195-.139.316-.278.485-.139.169-.293.375-.421.504s-.276.265-.119.524c.157.259.698 1.147 1.497 1.859 1.03.925 1.894 1.216 2.153 1.346.259.13.41.112.553-.065.143-.176.637-.743.807-1.001.17-.259.339-.216.58-.13.241.086 1.531.722 1.796.854.266.132.444.195.51.308.066.113.066.656-.177 1.335z"/>
-                </svg>
-            </a>
-            <a href="https://youtube.com/@brickers6458" target="_blank">
-                YouTube
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M19.615 3.184c.927.23 1.659.96 1.888 1.888.447 1.727.497 5.328.497 5.328s0 3.601-.497 5.328c-.23.927-.961 1.658-1.888 1.888-1.727.447-7.615.447-7.615.447s-5.888 0-7.615-.447c-.927-.23-1.658-.961-1.888-1.888-.497-1.727-.497-5.328-.497-5.328s0-3.601.497-5.328c.23-.927.961-1.658 1.888-1.888 1.727-.447 7.615-.447 7.615-.447s5.888 0 7.615.447zm-10.615 4.816v6l5.5-3-5.5-3z"/>
-                </svg>
-            </a>
-        </div>
-    </div>
-    <div class="info-container" id="home">
-        <div class="info-box">
-            <p>Benvenuti sul sito ufficiale di the Brickers ITA!! Se cliccate i pulsanti “YouTube” e “WhatsApp” potrete iscrivervi ai nostri canali dove pubblichiamo i nostri video e post.</p>
-            <p>In questo sito ti terremo aggiornato<span class="slash">/</span>a sul mondo dei mattoncini LEGO e sulle costruzioni ed eventi della nostra città LEGO. Iscriviti ai nostri canali semplicemente cliccando le scritte WhatsApp e YouTube e visita questo canale circa una volta a settimana per supportarci e restare aggiornato<span class="slash">/</span>a!</p>
-        </div>
-        <div class="video-box">
-            <video autoplay loop muted playsinline poster="1000317435.jpg">
-                <source src="brickers - The brickers.mp4" type="video/mp4">
-                Il tuo browser non supporta il tag video.
-            </video>
-        </div>
-    </div>
-</body>
-</html>
+il sito è eliminato(sono stato io)
